--- a/video-gallery.html
+++ b/video-gallery.html
@@ -60,7 +60,7 @@
                         class="text-span_nerf"></span></a><sup> 1</sup>,&nbsp;&nbsp;
                     <a href="https://scholar.google.com/citations?user=a7AMvgkAAAAJ&hl=zh-CN" target="_blank" class="nerf_authors_v2">Yangguang Li<span
                         class="text-span_nerf"></span></a><sup> 2</sup>,&nbsp;&nbsp;
-                    <a href="https://yanpei.me/" target="_blank" class="nerf_authors_v2">YanPei Cao<span
+                    <a href="https://yanpei.me/" target="_blank" class="nerf_authors_v2">Yanpei Cao<span
                         class="text-span_nerf"></span></a><sup> 2</sup>,&nbsp;&nbsp;
                     <a href="https://bo-zhang.me/" target="_blank" class="nerf_authors_v2">Bo Zhang<span
                         class="text-span_nerf"></span></a><sup> 3</sup>,&nbsp;&nbsp;
@@ -74,11 +74,11 @@
                 </div>
 
                 <div class="external-link">
-                    <a class="btn" href="https://arxiv.org/abs/2310.16818" role="button" target="_blank">
+                    <a class="btn" href="http://arxiv.org/abs/2410.12928" role="button" target="_blank">
                         <i class="ai ai-arxiv"></i> Arxiv </a>
                     <a class="btn" href="paper/Paper_high_res.pdf" role="button" target="_blank">
                         <i class="fa fa-file-pdf"></i> Paper </a>
-                    <a class="btn" href="https://github.com/deepseek-ai/DreamCraft3D" role="button" target="_blank" disabled>
+                    <a class="btn" href="https://github.com/MrTornado24/DreamCraft3D_Plus" role="button" target="_blank" disabled>
                         <i class="fa-brands fa-github"></i> Code </a>
                     <a class="btn btn-large btn-light" href="https://youtu.be/0FazXENkQms" role="button" target="_blank" disabled>
                         <i class="fa-brands fa-youtube"></i> Video </a>
@@ -95,10 +95,10 @@
         <h2 class="grey-heading_nerf">Results Gallery</h2>
         <div class="grid-container-img-video">
             <div>
-                <img class='img-move-up' src="assets_dreamcraft3d/demos/img4.png">
+                <img class='img-move-right-v3' src="assets_dreamcraft3d/demos/asuka.png"style="width:90%; height:auto;">
             </div>
             <div>
-                <video class="video" loop playsinline autoPlay muted src="assets_dreamcraft3d/demos/outputs_h264/video4.mp4"></video>
+                <video class="video" loop playsinline autoPlay muted src="assets_dreamcraft3d/demos/outputs_h264/asuka.mp4"></video>
             </div>
         </div>
         <div class="grid-container-img-video">
@@ -147,6 +147,38 @@
             </div>
             <div>
                 <video class="video" loop playsinline autoPlay muted src="assets_dreamcraft3d/demos/outputs_h264/video10.mp4"></video>
+            </div>
+        </div>
+        <div class="grid-container-img-video">
+            <div>
+                <img class='img-move-up' src="assets_dreamcraft3d/demos/wukong.png">
+            </div>
+            <div>
+                <video class="video" loop playsinline autoPlay muted src="assets_dreamcraft3d/demos/outputs_h264/wukong2.mp4"></video>
+            </div>
+        </div>
+        <div class="grid-container-img-video">
+            <div>
+                <img class='img-move-up' src="assets_dreamcraft3d/demos/batman.png">
+            </div>
+            <div>
+                <video class="video" loop playsinline autoPlay muted src="assets_dreamcraft3d/demos/outputs_h264/batman.mp4"></video>
+            </div>
+        </div>
+        <div class="grid-container-img-video">
+            <div>
+                <img class='img-move-up' src="assets_dreamcraft3d/demos/gentleman.png">
+            </div>
+            <div>
+                <video class="video" loop playsinline autoPlay muted src="assets_dreamcraft3d/demos/outputs_h264/gentleman.mp4"></video>
+            </div>
+        </div>
+        <div class="grid-container-img-video">
+            <div>
+                <img class='img-move-up' src="assets_dreamcraft3d/demos/rabbit.png">
+            </div>
+            <div>
+                <video class="video" loop playsinline autoPlay muted src="assets_dreamcraft3d/demos/outputs_h264/rabbit.mp4"></video>
             </div>
         </div>
        
