update video link and bib

--- a/index.html
+++ b/index.html
@@ -81,7 +81,7 @@
                         <i class="fa fa-file-pdf"></i> Paper </a>
                     <a class="btn" href="https://github.com/MrTornado24/DreamCraft3D_Plus" role="button" target="_blank" disabled>
                         <i class="fa-brands fa-github"></i> Code </a>
-                    <a class="btn btn-large btn-light" href="https://youtu.be/0FazXENkQms" role="button" target="_blank" disabled>
+                    <a class="btn btn-large btn-light" href="https://youtu.be/9VCaO4A1rN4" role="button" target="_blank" disabled>
                         <i class="fa-brands fa-youtube"></i> Video </a>
                     <a class="btn btn-large btn-light" href="https://mrtornado24.github.io/DreamCraft3D/" role="button" target="_blank" disabled>
                         <i class="fa fa-backward"></i> ICLR Version </a>
@@ -297,14 +297,11 @@
 <div class="white_section_nerf grey_container w-container">
 <h2 class="grey-heading_nerf">BibTeX</h2>
 <div class="bibtex">
-    <pre><code>@misc{sun2024dreamcraft3defficienthierarchical3d,
+    <pre><code>@article{sun2024dreamcraft3d++,
   title={DreamCraft3D++: Efficient Hierarchical 3D Generation with Multi-Plane Reconstruction Model}, 
-  author={Jingxiang Sun and Cheng Peng and Ruizhi Shao and Yuan-Chen Guo and Xiaochen Zhao and Yangguang Li and Yanpei Cao and Bo Zhang and Yebin Liu},
+  author={Sun, Jingxiang and Peng, Cheng and Shao, Ruizhi and Guo, Yuan-Chen and Zhao, Xiaochen and Li, Yangguang and Cao, Yanpei and Zhang, Bo and Liu, Yebin},
+  journal={arXiv preprint arXiv:2410.12928},
   year={2024},
-  eprint={2410.12928},
-  archivePrefix={arXiv},
-  primaryClass={cs.CV},
-  url={https://arxiv.org/abs/2410.12928}, 
 }</code></pre>
     <pre><code>@article{sun2023dreamcraft3d,
   title={Dreamcraft3d: Hierarchical 3d generation with bootstrapped diffusion prior},
