--- a/video-gallery.html
+++ b/video-gallery.html
@@ -80,7 +80,7 @@
                         <i class="fa fa-file-pdf"></i> Paper </a>
                     <a class="btn" href="https://github.com/MrTornado24/DreamCraft3D_Plus" role="button" target="_blank" disabled>
                         <i class="fa-brands fa-github"></i> Code </a>
-                    <a class="btn btn-large btn-light" href="https://youtu.be/0FazXENkQms" role="button" target="_blank" disabled>
+                    <a class="btn btn-large btn-light" href="https://youtu.be/9VCaO4A1rN4" role="button" target="_blank" disabled>
                         <i class="fa-brands fa-youtube"></i> Video </a>
                     <a class="btn btn-large btn-light" href="https://mrtornado24.github.io/DreamCraft3D/" role="button" target="_blank" disabled>
                         <i class="fa fa-backward"></i> ICLR Version </a>
