--- a/index.html
+++ b/index.html
@@ -46,7 +46,7 @@
     <div class="section hero nerf-_v2">
         <div class="container-2 nerf_header_v2 w-container">
             <h1 class="nerf_title_v2">DreamCraft3D++: Efficient Hierarchical 3D Generation with Multi-Plane Reconstruction Model</h1>
-            <!-- <div class="nerf_subheader_v2">ICLR 2024</div> -->
+            <div class="nerf_subheader_v2"> T-PAMI 2025</div>
             <div class="nerf_subheader_v2">
                 <div>
                     <a href="https://mrtornado24.github.io/" target="_blank" class="nerf_authors_v2">Jingxiang Sun<span
